feat(api): update OpenAPI
